intégration de la page de commande et celle d'inventaire

--- a/order.html
+++ b/order.html
@@ -16,14 +16,14 @@
   <body>
     <nav>
       <div class="content">
-        <a href="index.html">
+        <a href="/">
           <div class="logo">
             <img src="/asset/image/SPINLOG.png" alt="" />
           </div>
         </a>
         <ul>
           <li>
-            <a href="/">
+            <a href="">
               <svg
                 width="29"
                 height="29"
@@ -39,7 +39,7 @@
             </a>
           </li>
           <li>
-            <a href="exploreEverything.html">
+            <a href="">
               <svg
                 width="33"
                 height="33"
@@ -65,7 +65,7 @@
             </a>
           </li>
           <li>
-            <a href="adSearch.html">
+            <a href="">
               <svg
                 width="32"
                 height="32"
@@ -124,10 +124,10 @@
                 />
               </h5>
               <ul class="dropdown">
-                <li class="icon"><a href="shopAllArticle.html">Tous les articles</a></li>
-                <li class="icon"><a href="wantlist.html">Articles dans ma wantlist</a></li>
-                <li class="icon"><a href="purchase.html">Achats</a></li>
-                <li class="icon"><a href="cart.html">Panier</a></li>
+                <li class="icon">Tous les articles</li>
+                <li class="icon">Articles dans ma wantlist</li>
+                <li class="icon">Achats</li>
+                <li class="icon">Panier</li>
               </ul>
             </div>
 
@@ -141,9 +141,9 @@
                 />
               </h5>
               <ul class="dropdown">
-                <li class="icon"><a href="sell.html">Vendre</a></li>
-                <li class="icon"><a href="order.html">Commandes</a></li>
-                <li class="icon"><a href="inventory.html">Inventaires</a></li>
+                <li class="icon">Vendre</li>
+                <li class="icon">Commandes</li>
+                <li class="icon">Inventaires</li>
                 <li class="icon">Facturation</li>
                 <li class="icon">Ma boutique</li>
               </ul>
@@ -184,189 +184,106 @@
           </div>
         </div>
       </section>
-      <section class="banner">
-        <div class="container">
-          <div class="banner_content">
-            <img
-              src="/asset/image/musician-playing-electric-guitar 1.png"
-              alt=""
-            />
-          </div>
-        </div>
-      </section>
-      <section class="songs">
+      <section class="boutique">
         <div class="container">
           <div class="content">
-            <h1>Musiques les plus consultées du mois</h1>
-            <div class="card_slider">
-              <div class="item_list">
-                <div class="item">
-                  <img src="/asset/image/musi1.png" alt="" />
-                  <div class="item_text">
-                    <div>
-                      <h4>Toxic Love -Willing</h4>
-                      <span>DARRYN JONES</span>
-                    </div>
-                    <p>
-                      <span>2024</span>
-                      <span>Electronic, Disco, House</span>
-                      <span>Vinyl, 7”, 45 RPM</span>
-                    </p>
-                    <div class="buttons">
-                      <button class="shop">
-                        <img src="/asset/image/cart.png" alt="" />
-                        <span>Acheter</span>
-                      </button>
-                      <button class="want">
-                        <img
-                          src="/asset/image/favorite_16dp_FFFFFF_FILL0_wght400_GRAD0_opsz20.png"
-                          alt=""
-                        />
-                        <span>+ Wantlist</span>
-                      </button>
-                    </div>
-                  </div>
-                </div>
+            <div class="div">
+              <h2>Vendre</h2>
+              <div class="rectangle">
+                <button class="act">vendre</button>
+                <button>Commandes</button>
+                <button>Inventaire</button>
+                <button>Facturarion</button>
               </div>
             </div>
-          </div>
-        </div>
-      </section>
-      <section class="disq">
-        <div class="container">
-          <div class="content">
-            <h2>Disques les mieux notés du mois</h2>
-            <div class="card_slider">
-              <div class="item_list">
-                <div class="item it_dis">
-                  <img src="/asset/image/R-31.png" alt="" />
-                  <div class="item_text">
-                    <div>
-                      <h4>Selected Ambient Works</h4>
-                      <h4>Volume II</h4>
-                      <span>APHEX TWIN</span>
-                    </div>
-                    <p>
-                      <span>2024</span>
-                      <span>Electronic, Ambient, Experimental</span>
-                      <span>Vinyl, 7”, 45 RPM</span>
+            <div class="shop_drop">
+              <div class="drop_list oder">
+                <div class="order_drop">
+                  <p>Afficher</p>
+                  <div class="lang_wrapper">
+                    <p class="order_p">
+                      <span>Tout</span>
+                      <img
+                        src="/asset/image/arrow_forward_ios_black_24dp 2.png"
+                        alt=""
+                        class="bt_arrow"
+                      />
                     </p>
-                    <div class="buttons">
-                      <button class="shop">
-                        <img src="/asset/image/cart.png" alt="" />
-                        <span>Acheter</span>
-                      </button>
-                      <button class="want">
-                        <img
-                          src="/asset/image/favorite_16dp_FFFFFF_FILL0_wght400_GRAD0_opsz20.png"
-                          alt=""
-                        />
-                        <span>+ Wantlist</span>
-                      </button>
-                    </div>
+                    <ul class="order_drop_list dropdown">
+                      <li class="check"><div id="checkbox"></div>Tout</li>
+                      <li class="check"><div id="checkbox"></div>Nouvelles commandes</li>
+                      <li class="check"><div id="checkbox"></div>Commandes annulées</li>
+                      <li class="check"><div id="checkbox"></div>Factures envoyées</li>
+                      <li class="check"><div id="checkbox"></div>Demandes de paiement envoyées</li>
+                      <li class="check"><div id="checkbox"></div>paiements reçus</li>
+                      <li class="check"><div id="checkbox"></div>Commandes en préparations</li>
+                      <li class="check"><div id="checkbox"></div>Colis envoyés</li>
+                    </ul>
                   </div>
                 </div>
 
-                <div class="item it_dis">
+                <div class="order_drop">
+                    <p>Status</p>
+                    <div class="lang_wrapper">
+                      <p class="order_p">
+                        <span>Nouvelle commande</span>
+                        <img
+                          src="/asset/image/arrow_forward_ios_black_24dp 2.png"
+                          alt=""
+                          class="bt_arrow"
+                        />
+                      </p>
+                      <ul class="dropdown list">
+                        <li>Pop</li>
+                        <li>Rock</li>
+                        <li>Blue</li>
+                        <a href=""> <li>voir tout</li></a>
+                      </ul>
+                    </div>
+                  </div>
+              </div>
+              <div class="shop_detail">
+                <p>1 - 25 sur 48579</p>
+                <span>Affichage</span>
+                <button>
+                  <span>25</span>
                   <img
-                    src="/asset/image/R-31768115-1726691299-7647 1.png"
+                    src="/asset/image/arrow_forward_ios_black_24dp 2.png"
                     alt=""
+                    class="bt_arrow"
                   />
-                  <div class="item_text">
-                    <div>
-                      <h4>Selected Ambient Works</h4>
-                      <h4>Volume II</h4>
-                      <span>APHEX TWIN</span>
-                    </div>
-                    <p>
-                      <span>2024</span>
-                      <span>Electronic, Ambient, Experimental</span>
-                      <span>Vinyl, 7”, 45 RPM</span>
-                    </p>
-                    <div class="buttons">
-                      <button class="shop">
-                        <img src="/asset/image/cart.png" alt="" />
-                        <span>Acheter</span>
-                      </button>
-                      <button class="want">
-                        <img
-                          src="/asset/image/favorite_16dp_FFFFFF_FILL0_wght400_GRAD0_opsz20.png"
-                          alt=""
-                        />
-                        <span>+ Wantlist</span>
-                      </button>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="item it_dis">
-                  <img src="/asset/image/R-31.png" alt="" />
-                  <div class="item_text">
-                    <div>
-                      <h4>Selected Ambient Works</h4>
-                      <h4>Volume II</h4>
-                      <span>APHEX TWIN</span>
-                    </div>
-                    <p>
-                      <span>2024</span>
-                      <span>Electronic, Ambient, Experimental</span>
-                      <span>Vinyl, 7”, 45 RPM</span>
-                    </p>
-                    <div class="buttons">
-                      <button class="shop">
-                        <img src="/asset/image/cart.png" alt="" />
-                        <span>Acheter</span>
-                      </button>
-                      <button class="want">
-                        <img
-                          src="/asset/image/favorite_16dp_FFFFFF_FILL0_wght400_GRAD0_opsz20.png"
-                          alt=""
-                        />
-                        <span>+ Wantlist</span>
-                      </button>
-                    </div>
-                  </div>
-                </div>
+                </button>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <section class="songs">
+      <section class="table">
         <div class="container">
           <div class="content">
-            <h1>Disques les plus vendus du mois</h1>
-            <div class="card_slider">
-              <div class="item_list">
-                <div class="item">
-                  <img src="/asset/image/musi1.png" alt="" />
-                  <div class="item_text">
-                    <div>
-                      <h4>Toxic Love -Willing</h4>
-                      <span>DARRYN JONES</span>
-                    </div>
-                    <p>
-                      <span>2024</span>
-                      <span>Electronic, Disco, House</span>
-                      <span>Vinyl, 7”, 45 RPM</span>
-                    </p>
-                    <div class="buttons">
-                      <button class="shop">
-                        <img src="/asset/image/cart.png" alt="" />
-                        <span>Acheter</span>
-                      </button>
-                      <button class="want">
-                        <img
-                          src="/asset/image/favorite_16dp_FFFFFF_FILL0_wght400_GRAD0_opsz20.png"
-                          alt=""
-                        />
-                        <span>+ Wantlist</span>
-                      </button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
+            <table>
+              <tr>
+                <th class="check"><div id="checkbox"></div>Numéro de commande</th>
+                <th>Résumé de commande</th>
+                <th>Date</th>
+                <th>Statut</th>
+                <th>TOTAL</th>
+              </tr>
+              <tr class="tr tr_bottom want_dt">
+                <td class="td check"><div id="checkbox"></div>7098497975</td>
+                <td>Titre produit-Titre produit</td>
+                <td>02-10-24 08:12</td>
+                <td>Expédié</td>
+                <td>16.32 €</td>
+              </tr>
+              <tr class="tr tr_bottom want_dt">
+                <td class="td check"><div id="checkbox"></div>7098497975</td>
+                <td>Titre produit-Titre produit</td>
+                <td>02-10-24 08:12</td>
+                <td>Expédié</td>
+                <td>16.32 €</td>
+              </tr>
+            </table>
           </div>
         </div>
       </section>
